# comp_hack

./: .appveyor.yml  .gitattributes  .gitmodules  .travis.yml  CMakeLists.txt  MariaDBTestSetup.sql  README.md  clang_format.sh  cumshot.md  dropbox-deployment.yml  vsbuild_x64.bat  vsbuild_x86.bat
.github/workflows/: ci.yml  pr.yml
ci/: bintray.json.in  dropbox-deployment-1.0.0.gem  global.sh  linux-before_install.sh  linux-build.sh  linux-channel.sh  linux-deploy.sh  linux-libcomp.sh  linux-warmcache.sh  qt-installer-windows.qs  travis-install-qt-windows.sh  windows-build.ps1  windows-build.sh  windows-channel.sh  windows-libcomp.sh  windows-updater-build.ps1  windows-updater.sh  windows-warmcache.sh
ci/checksums/: doxygen.zip.sha1
client/: CMakeLists.txt
client/src/: GameWorker.cpp  GameWorker.h  LobbyScene.cpp  LobbyScene.h  LoginDialog.cpp  LoginDialog.h  main.cpp
client/ui/: LoginDialog.ui
cmake/: binaries.cmake  external.cmake  git-version.cmake
contrib/: sources.sh
contrib/installer/: generate.py  installer.in.wxs
contrib/nixconfig/: lobby.xml  world.xml
contrib/testing/: channel.xml  constants.xml  lobby.xml  programs-lobby.xml  world.xml
contrib/winconfig/: lobby.xml  world.xml
debian/: changelog  comphack-doc.install  comphack-tools-qt.install  comphack-tools.install  comphack.install  comphack.postint  control
docs/guide/: CMakeLists.txt
libclient/: CMakeLists.txt
libclient/src/: ConnectionManager.cpp  ConnectionManager.h  LobbyClient.cpp  LobbyManager.cpp  LobbyManager.h  LogicWorker.cpp  LogicWorker.h  MessageCharacterList.h  MessageClient.h  MessageConnected.h  MessageConnectionInfo.h
libcomp/: CMakeLists.txt
libcomp/schema/: account.xml  character.xml  databaseconfig_cassandra.xml  demon.xml  item.xml  master.xml  packet_world_description.xml  registeredserver.xml  server_zone.xml  serverconfig.xml  test.xml
libcomp/src/: ArgumentParser.h  BaseServer.cpp  BaseServer.h  BinaryDataSet.h  ChannelConnection.cpp  ChannelConnection.h  Child.cpp  Child.h  Config.cpp  ConnectionMessage.h  Constants.h  DataStore.cpp  Database.cpp  Database.h  DatabaseBind.h  DatabaseCassandra.cpp  DatabaseCassandra.h  DatabaseMariaDB.cpp  DatabaseQuery.cpp  DatabaseQuery.h  DatabaseQueryCassandra.cpp  DatabaseQueryCassandra.h  DatabaseQueryMariaDB.cpp  DatabaseQuerySQLite3.cpp  DatabaseQuerySQLite3.h  DatabaseSQLite3.cpp  DatabaseSQLite3.h  DatabaseTransaction.h  DayCare.cpp  DayCare.h  Decrypt.cpp  DefinitionManager.cpp  DefinitionManager.h  DynamicObject.h  DynamicVariable.h  DynamicVariableArray.h  DynamicVariableFactory.h  DynamicVariableInt.h  DynamicVariableList.h  DynamicVariableReference.h  (+58 more)
libcomp/tests/: Cassandra.cpp  GeneratedObjects.cpp  MariaDB.cpp  ScriptEngine.cpp
libhack/schema/: worldsharedconfig.xml
libhack/src/: DefinitionManager.cpp  ServerConstants.cpp  ServerConstants.h
libobjgen/: CMakeLists.txt
libpackets/: CMakeLists.txt
libtester/: CMakeLists.txt
libtester/src/: Login.cpp  (+9 more)
tools/: CMakeLists.txt
tools/cathedral/: CMakeLists.txt
tools/cathedral/src/: ActionAddRemoveItemsUI.cpp  ActionAddRemoveItemsUI.h  ActionAddRemoveStatusUI.cpp  ActionAddRemoveStatusUI.h  ActionCreateLootUI.cpp  ActionCreateLootUI.h  ActionDelayUI.cpp  ActionDelayUI.h  ActionDisplayMessageUI.cpp  ActionDisplayMessageUI.h  ActionGrantSkillsUI.cpp  ActionGrantSkillsUI.h  ActionGrantXPUI.cpp  ActionGrantXPUI.h  ActionIDs.cpp  ActionIDs.h  ActionIDsItem.cpp  ActionIDsItem.h  ActionList.cpp  ActionList.h  ActionMap.cpp  ActionMap.h  ActionMapItem.cpp  ActionMapItem.h  ActionPlayBGMUI.cpp  ActionPlayBGMUI.h  ActionPlaySoundEffectUI.cpp  ActionPlaySoundEffectUI.h  ActionRunScriptUI.cpp  ActionRunScriptUI.h  ActionSetHomepointUI.cpp  ActionSetHomepointUI.h  ActionSetNPCStateUI.cpp  ActionSetNPCStateUI.h  ActionSpawnUI.cpp  ActionSpawnUI.h  ActionSpecialDirectionUI.cpp  ActionSpecialDirectionUI.h  ActionStageEffectUI.cpp  ActionStageEffectUI.h  (+113 more)
tools/cathedral/ui/: Action.ui  ActionAddRemoveItems.ui  ActionAddRemoveStatus.ui  ActionCreateLoot.ui  ActionDelay.ui  ActionDisplayMessage.ui  ActionGrantSkills.ui  ActionGrantXP.ui  ActionIDs.ui  ActionIDsItem.ui  ActionList.ui  ActionMap.ui  ActionMapItem.ui  ActionPlayBGM.ui  ActionPlaySoundEffect.ui  ActionRunScript.ui  ActionSetHomepoint.ui  ActionSetNPCState.ui  ActionSpawn.ui  ActionSpecialDirection.ui  ActionStageEffect.ui  ActionStartEvent.ui  ActionUpdateCOMP.ui  ActionUpdateFlag.ui  ActionUpdateLNC.ui  ActionUpdatePoints.ui  ActionUpdateQuest.ui  ActionUpdateZoneFlags.ui  ActionZoneChange.ui  ActionZoneInstance.ui  DropSetProperties.ui  DynamicListItem.ui  Event.ui  EventBase.ui  EventCondition.ui  EventDirection.ui  EventExNPCMessage.ui  EventITime.ui  EventMultitalk.ui  EventNPCMessage.ui  (+13 more)
(+352 files in other folders)
